Bugfixes: - Disable transfer ownership towards blocked users. - Badges in people section occupy too much space. Show icons. - Activity shows entry but stays unresolved, when a user is restricted but sends a file.

--- a/client/src/components/ActivityRow.scss
+++ b/client/src/components/ActivityRow.scss
@@ -95,9 +95,12 @@
 .activity_row_delete .activity_row_icon,
 .activity_row_kick .activity_row_icon,
 .activity_row_block .activity_row_icon,
-.activity_row_report .activity_row_icon,
-.activity_row_restrict .activity_row_icon {
+.activity_row_report .activity_row_icon {
   color: var(--danger);
+}
+
+.activity_row_restrict .activity_row_icon {
+  color: var(--warn);
 }
 
 .activity_row_join .activity_row_icon,
